--- a/domestic-politics-1/posc1020-lecture-domestic-politics-1.Rmd
+++ b/domestic-politics-1/posc1020-lecture-domestic-politics-1.Rmd
@@ -76,11 +76,11 @@ War generally never happens with complete and perfect information, except for:
 2. Asymmetric/incomplete information (i.e. uncertainty)
 3. Commitment problems
 
-### 
+### Plaza de Mayo (Argentina), March 30, 1982
 
 ![Galtieri's Argentine junta received stiff protests in March 1982.](argentina-protest-march-30.jpg)
 
-### 
+### Plaza de Mayo (Argentina), April 2, 1982
 
 ![Galtieri's reception in the same plaza on April 2, 1982](galtieri-plazo.png)
 
